--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-siteTitle = "Blog by John Doe"
+siteTitle = "Koleokland"
 siteDescr = "Lorem Ipsum is simply dummy text of the printing and typesetting industry."
-siteAuthor = "John Doe"
+siteAuthor = "Kyle Chamberlain"
 
 siteTelegramUrl = "#"
 siteTwitterUrl = "#"
